--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "Abdiel Carreño <zayelmech@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1"
     }
 }
